Refactor MineLightsClient to use ProcessBuilder